# md-reader-pro

./: # LM Studio TTS Plugin Implementation  # Troubleshooting WSL Performance Issues  .dockerignore  .env.clean  .env.example  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  ARCHITECTURE.md  BACKLOG.md  BRANCH_ANALYSIS.md  BRANCH_ANALYSIS_copilot-determine-best-merge-strategy.md  BRANCH_CLEANUP_INSTRUCTIONS.md  BRANCH_CLEANUP_RECOMMENDATIONS.md  BRANCH_COMPARISON_SUMMARY.md  BRANCH_REVIEW_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  COMPREHENSIVE_FUNCTIONALITY_REPORT.md  CONTRIBUTING.md  Comprehensive Case Report  DELETE_BRANCHES.md  DELETION_RECOMMENDATION.md  DEPLOYMENT.md  DEV_BOOTUP_AND_E2E_REPORT.md  DOCUMENTATION.md  Dockerfile  E2E_VALIDATION_SUCCESS.md  FEATURES.md  FILE_UPLOAD_FIX_DOCUMENTATION.md  FIXES_TABLE.md  I am working on traing an AI between par  IDEAS.md  If you encou  LICENSE  PERFORMANCE.md  PERFORMANCE_IMPROVEMENTS.md  (+99 more)
.claude/: settings.local.json
.contextstream/: config.json
.github/: copilot-instructions.md  dependabot.yml
coverage/: index.html  index.js.html  lcov.info
docs/: FEATURES.md  MULTI_AGENT_SWARM_DESIGN.md  SPIKE_RESULTS.md  WORKFLOW_LOGGING_GUIDE.md  WORKFLOW_LOGGING_QUICK_REF.md  swarm-log.md  (+1 more)
rust-cli/: Cargo.toml  README.md  SECURITY.md  plugin.manifest.json
rust-cli/.github/workflows/: ci.yml
rust-cli/src/: analyzer.rs  auth.rs  config.rs  gui.rs  ipc.rs  lib.rs  main.rs  path_validator.rs  picker.rs  ro_lock.rs  tui.rs
rust-cli/tests/: e2e_golden_path.rs  path_validation_integration.rs  plugin_auth_test.rs
src/: index.html  (+2 more)
(+128 files in other folders)
